# template.py

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  justfile  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: linting.yml  release.yml  unit-tests-all.yml
requirements/: local.txt
